--- a/styles/estilo.css
+++ b/styles/estilo.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100;300;400;600;800&display=swap");
 * {
   margin: 0;
@@ -15,7 +14,10 @@
   color: gray;
 }
 
-.navbar-brand:nth-child(1) {
+.colorEnc {
+  background-color: gray;
+}
+.colorEnc .container-fluid .navbar-brand:nth-child(1) {
   background: rgb(93, 93, 93);
   border: 5px solid #000000;
   color: white;
@@ -43,11 +45,6 @@
   background-color: rgba(0, 0, 0, 0.485);
   padding-inline: 10px;
   text-align: center;
-}
-.imagenPrincipal p::first-line {
-  color: rgb(0, 0, 0);
-  font-size: 20px;
-  font-weight: bold;
 }
 .imagenPrincipal p::-moz-selection {
   background-color: white;
@@ -80,12 +77,17 @@
 .tarjetitass .tarjetita .informacion {
   padding: 0px 20px 20px 20px;
 }
+.tarjetitass .tarjetita .informacion .tarjetita__titulo {
+  font-size: 20px;
+}
 .tarjetitass .tarjetita .informacion .vermas {
   color: white;
   text-decoration: none;
   background-color: rgb(69, 68, 68);
   border-radius: 5px;
-  padding-inline: 5px;
+  padding-inline: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .tarjetitas {
@@ -123,9 +125,7 @@ footer {
   display: flex;
   padding-inline: 30px;
   padding-block: 30px;
-  /* border: 5px solid black; */
   font-size: 20px;
-  /* text-align: center; */
   text-transform: capitalize;
   justify-content: space-between;
   color: white;
@@ -144,12 +144,34 @@ footer .linkred {
 footer .linkred div a {
   color: white;
   text-decoration: none;
-  font-size: 25px;
+  font-size: 35px;
   padding: 15px;
 }
-footer .linkred div p {
+footer .linkred div a:hover {
+  color: rgb(93, 93, 93);
+}
+footer .linkred p {
   font-style: italic;
   font-size: 25px;
+}
+
+.linkprop {
+  color: white;
+  text-decoration: none;
+  font-style: italic;
+}
+.linkprop::-moz-selection {
+  background-color: white;
+  color: gray;
+}
+.linkprop::selection {
+  background-color: white;
+  color: gray;
+}
+
+ul li {
+  text-decoration: none;
+  font-style: italic;
 }
 
 @media only screen and (min-width: 769px) and (max-width: 1370px) {
@@ -166,9 +188,7 @@ footer .linkred div p {
   footer {
     padding-inline: 25px;
     padding-block: 25px;
-    /* border: 5px solid black; */
     font-size: 15px;
-    /* text-align: center; */
   }
   .footer p {
     font-size: 20px;
@@ -180,7 +200,7 @@ footer .linkred div p {
     font-size: 20px;
     padding: 10px;
   }
-  footer div p {
+  .linkprop {
     font-size: 20px;
   }
   .pie__logo {
@@ -201,9 +221,7 @@ footer .linkred div p {
   footer {
     padding-inline: 20px;
     padding-block: 20px;
-    /* border: 5px solid black; */
     font-size: 15px;
-    /* text-align: center; */
   }
   .footer p {
     font-size: 15px;
@@ -212,7 +230,7 @@ footer .linkred div p {
     font-size: 15px;
     padding: 10px;
   }
-  footer div p {
+  .linkprop {
     font-size: 15px;
   }
   .pie__logo {
@@ -233,9 +251,7 @@ footer .linkred div p {
   footer {
     padding-inline: 15px;
     padding-block: 15px;
-    /* border: 5px solid black; */
     font-size: 15px;
-    /* text-align: center; */
   }
   .footer p {
     font-size: 10px;
@@ -244,7 +260,7 @@ footer .linkred div p {
     font-size: 10px;
     padding: 5px;
   }
-  footer div p {
+  .linkprop {
     font-size: 10px;
   }
   .pie__logo {
@@ -265,9 +281,7 @@ footer .linkred div p {
   footer {
     padding-inline: 15px;
     padding-block: 15px;
-    /* border: 5px solid black; */
     font-size: 15px;
-    /* text-align: center; */
   }
   .footer p {
     font-size: 10px;
@@ -276,11 +290,20 @@ footer .linkred div p {
     font-size: 10px;
     padding: 5px;
   }
-  footer div p {
+  .linkprop {
     font-size: 10px;
   }
   .pie__logo {
     width: 40px;
+  }
+  .tarjetitass {
+    display: block;
+  }
+  .pading-section {
+    padding: 20px 50px;
+  }
+  .margin-mobile {
+    margin-bottom: 50px;
   }
 }
 @media only screen and (max-width: 400px) {
@@ -297,9 +320,7 @@ footer .linkred div p {
   footer {
     padding-inline: 10px;
     padding-block: 10px;
-    /* border: 5px solid black; */
     font-size: 10px;
-    /* text-align: center; */
   }
   .footer p {
     font-size: 7px;
@@ -308,7 +329,7 @@ footer .linkred div p {
     font-size: 7px;
     padding: 3px;
   }
-  footer div p {
+  .linkprop {
     font-size: 7px;
   }
   .pie__logo {
@@ -329,19 +350,16 @@ footer .linkred div p {
   footer {
     padding-inline: 10px;
     padding-block: 10px;
-    /* border: 5px solid black; */
     font-size: 40px;
-    /* text-align: center; */
   }
   .footer p {
     font-size: 7px;
   }
   .linkred a {
-    /* le agregue el tamaño de letra en cada media quares y tamb el del padding */
     font-size: 7px;
     padding: 3px;
   }
-  footer div p {
+  .linkprop {
     font-size: 7px;
   }
   .pie__logo {
@@ -373,17 +391,6 @@ footer .linkred div p {
 .animacion:hover {
   transform: scale(1.1) translateY(-40px);
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-}
-
-@-webkit-keyframes tilt-in-fwd-tr {
-  0% {
-    transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px) skew(-35deg, 10deg);
-    opacity: 0;
-  }
-  100% {
-    transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
-    opacity: 1;
-  }
 }
 @keyframes tilt-in-fwd-tr {
   0% {
